fixing spacing issues

--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ section {
 
 #about {
   position: relative;
+  margin-top:4rem;
   margin-bottom: 4rem; /* Add margin to create space between sections */
 }
 
